--- a/src/scss/libs/grid.scss
+++ b/src/scss/libs/grid.scss
@@ -8,7 +8,10 @@
 .col-lg-8  { width: 66.66666667%; }
 .col-lg-9  { width: 75%; }
 .col-lg-10 { width: 83.33333333%; }
-.col-lg-11 { width: 91.66666667%; }
+.col-lg-11 { 
+    width: 91.66666667%; 
+    max-width: 1440px;
+}
 .col-lg-12 { width: 100%; }
 
 .col-lg-vw-1  { width: 8.3vw; }
