--- a/src/scss/parts/header/header-mobile.scss
+++ b/src/scss/parts/header/header-mobile.scss
@@ -18,7 +18,7 @@
         align-items: center;
         justify-content: flex-end;
     }
-    button {
+    .nav-meta_item-user {
         display: block;
         height: 1.5rem;
         width: 1.5rem;
@@ -33,6 +33,8 @@
         order: 2;
         margin-right: 0;
         margin-left: .75rem;
+        width: 2.5rem;
+        height: 2.5rem;
     }
 }
 
