--- a/src/scss/parts/header/main-header.scss
+++ b/src/scss/parts/header/main-header.scss
@@ -155,6 +155,13 @@
 }
 
 .user-stat_name {
-    font-size: .85rem;
     color: $white;
+}
+
+.nav-meta_item-user {
+    color: $white;
+    transition: all .25s ease-in-out;
+    &:hover {
+        opacity: .85;
+    }
 }
