--- a/src/scss/parts/pages/page-watch.scss
+++ b/src/scss/parts/pages/page-watch.scss
@@ -1,8 +1,14 @@
 
 
 .selected-programm {
-    background-color: #e697e3;
+    background-color: #33114d;
     color: $white;
+}
+
+.watch_episodes {
+    .section-title {
+        margin-bottom: 2rem;
+    }
 }
 
 .selected-programm_image{
@@ -20,16 +26,33 @@
 }
 
 .episodes{
-    background-color: $purple;
+    background-color: $black;
     color: $white;
     padding: 2rem 0;
+    position: relative;
+    &:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: url(../img/dot.gif) left top repeat;
+        background-size: 5rem;
+        opacity: .3;
+        z-index: 0;
+        pointer-events: none;
+        z-index: 0;
+    }
 }
 
 .episodes_list{
     margin: 0 auto;
     display: grid;
-    grid-template-columns: repeat(4,4fr);
-    grid-gap: 2rem;
+    grid-template-columns: repeat(3,4fr);
+    grid-gap: 4rem;
+    position: relative;
+    z-index: 1;
 }
 
 .episode{
@@ -46,7 +69,7 @@
 
 .episode_image{
     width: 100%;
-    height: 11rem;
+    height: 14rem;
     img{
         height: 100%;
         width: 100%;
@@ -64,6 +87,10 @@
 }
 
 @media only screen and (max-width: 768px) { 
+    .watch_episodes {
+        position: relative;
+        z-index: 1;
+    }
     .episodes_list{
         grid-template-columns: repeat(1,1fr);
     }
